--- a/css/lecturas.css
+++ b/css/lecturas.css
@@ -54,6 +54,7 @@ nav ul li a:hover {
 
 .lectura p {
     font-size: 14px;
+    color: black;
 }
 
 .lectura a {
@@ -68,4 +69,14 @@ nav ul li a:hover {
 
 .lectura a:hover {
     background-color: #0096c7;
+}
+
+footer {
+    background-color: #005599;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
