ajustes a css lectura

--- a/css/lecturas.css
+++ b/css/lecturas.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #0077b6;
+    background-color: #62ace0;
     color: white;
     text-align: center;
     padding: 20px 0;
