--- a/css/comunicacion.css
+++ b/css/comunicacion.css
@@ -123,7 +123,7 @@ ul li {
 }
 
 footer {
-    background-color: #005599;
+    background-color: #62ace0;
     color: white;
     text-align: center;
     padding: 10px;
