--- a/css/lecturas.css
+++ b/css/lecturas.css
@@ -72,7 +72,7 @@ nav ul li a:hover {
 }
 
 footer {
-    background-color: #005599;
+    background-color: #62ace0;
     color: white;
     text-align: center;
     padding: 10px;
