--- a/css/SI.css
+++ b/css/SI.css
@@ -75,7 +75,7 @@ h1, h2, h3 {
 }
 
 footer {
-    background-color: #005599;
+    background-color: #62ace0;
     color: white;
     text-align: center;
     padding: 10px;
