--- a/css/autores.css
+++ b/css/autores.css
@@ -62,7 +62,7 @@ section p {
 }
 
 footer {
-    background-color: #005599;
+    background-color: #62ace0;
     color: white;
     text-align: center;
     padding: 10px;
