--- a/css/multimedia.css
+++ b/css/multimedia.css
@@ -76,7 +76,7 @@ nav ul li a:hover {
 }
 
 footer {
-    background-color: #005599;
+    background-color: #62ace0;
     color: white;
     text-align: center;
     padding: 10px;
