--- a/css/sistemas.css
+++ b/css/sistemas.css
@@ -66,15 +66,6 @@ h1, h2, h3 {
     text-decoration: underline;
 }
 
-footer {
-    background-color: #005599;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-}
 
 aside {
     width: 90%;
@@ -89,4 +80,13 @@ aside img {
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
     display: block;
     margin: 0 auto;
+}
+footer {
+    background-color: #62ace0;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
