--- a/css/software.css
+++ b/css/software.css
@@ -113,7 +113,7 @@ ul li {
 }
 
 footer {
-    background-color: #005599;
+    background-color: #62ace0;
     color: white;
     text-align: center;
     padding: 10px;
