--- a/css/inicio.css
+++ b/css/inicio.css
@@ -13,17 +13,19 @@ header {
     padding: 20px 0;
 }
 
+
 nav ul {
     list-style: none;
     padding: 0;
+    margin: 0;
     display: flex;
     justify-content: center;
     background-color: #005f87;
-    margin: 0;
+    flex-wrap: wrap;
 }
 
 nav ul li {
-    margin: 0 15px;
+    margin: 5px 15px;
 }
 
 nav ul li a {
@@ -43,8 +45,8 @@ footer {
     background-color: #62ace0;
     color: white;
     text-align: center;
-    padding: 10px 0;
-    position: fixed;
-    bottom: 0;
+    padding: 15px 0;
+    position: relative;
     width: 100%;
+    margin-top: 20px;
 }
